--- a/test/fixtures/gathas.yml
+++ b/test/fixtures/gathas.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: MyString
+  index: MyString
   vagga_id: 1
 
 two:
-  name: MyString
+  index: MyString
   vagga_id: 1
